fix: 🐛 bubble menu cut off by editor perimeter (https://github.com/Leecason/element-tiptap/issues/98)
close https://github.com/Leecason/element-tiptap/issues/98

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   max-height: 100%;
-  overflow: hidden;
   position: relative;
   width: 100%;
 
@@ -16,11 +15,22 @@
     box-sizing: border-box;
   }
 
+  .border-top-radius {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .border-bottom-radius {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+
   &__codemirror {
     display: flex;
     flex-grow: 1;
     font-size: 16px;
     line-height: 24px;
+    overflow: scroll;
 
     .CodeMirror {
       flex-grow: 1;
